// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel by pressing escape 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>Option A</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > caseSensitive: true makes input case-sensitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option a
<cyan>│</fg>  <dim><bg:white>[7m A [27m</bg></fg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = false) > caseSensitive: true makes options case-sensitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> A </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>Option A</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<bg:cyan><dim> a </fg></bg> Option A
<dim><bg:white>[7m b [27m</bg></fg> Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = false) > input is case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = false) > long cancelled labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Select an option:
<dim>│</fg>  [9m<dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > long option labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Select an option:
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>",
  "
",
]
`;

exports[`text (isCI = false) > long submitted labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Select an option:
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>",
  "
",
]
`;

exports[`text (isCI = false) > options are case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> A </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = false) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > selects option by keypress 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option B</bold>",
  "
",
]
`;

exports[`text (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<bg:cyan><dim> a </fg></bg> Option A
<dim><bg:white>[7m b [27m</bg></fg> Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = true) > can cancel by pressing escape 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>Option A</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > caseSensitive: true makes input case-sensitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option a
<cyan>│</fg>  <dim><bg:white>[7m A [27m</bg></fg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = true) > caseSensitive: true makes options case-sensitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> A </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>Option A</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<bg:cyan><dim> a </fg></bg> Option A
<dim><bg:white>[7m b [27m</bg></fg> Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = true) > input is case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = true) > long cancelled labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Select an option:
<dim>│</fg>  [9m<dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > long option labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Select an option:
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>",
  "
",
]
`;

exports[`text (isCI = true) > long submitted labels are wrapped correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select an option:
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> This is a somewhat long
<cyan>│</fg>   label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label 
<cyan>│</fg>  This is a somewhat long 
<cyan>│</fg>  label This is a somewhat 
<cyan>│</fg>  long label This is a 
<cyan>│</fg>  somewhat long label This is
<cyan>│</fg>   a somewhat long label This
<cyan>│</fg>   is a somewhat long label
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Short label
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=16>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Select an option:
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label </bold>
<dim>│</fg>  <dim>This is a somewhat long </bold>
<dim>│</fg>  <dim>label This is a somewhat </bold>
<dim>│</fg>  <dim>long label This is a </bold>
<dim>│</fg>  <dim>somewhat long label This is</bold>
<dim>│</fg>  <dim> a somewhat long label This</bold>
<dim>│</fg>  <dim> is a somewhat long label</bold>",
  "
",
]
`;

exports[`text (isCI = true) > options are case-insensitive by default 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> A </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
]
`;

exports[`text (isCI = true) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option A</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > selects option by keypress 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <bg:cyan><dim> a </fg></bg> Option A
<cyan>│</fg>  <dim><bg:white>[7m b [27m</bg></fg> Option B
<cyan>└</fg>
",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option B</bold>",
  "
",
]
`;

exports[`text (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<bg:cyan><dim> a </fg></bg> Option A
<dim><bg:white>[7m b [27m</bg></fg> Option B

",
  "<cursor.show>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Option A</bold>",
  "
",
]
`;
